@@ -3,8 +3,10 @@ dpkg-dev-el (37.5) unstable; urgency=medium
   * debian-changelog-mode: (require 'faces).  Bug fix:
     "debian-changelog-warning-face not defined in Emacs 23", thanks to
     Trent W. Buck (Closes: #592195).
+  * debian-changelog-mode: use defface to define
+    debian-changelog-warning-face (Closes: #500642)
 
- -- David Bremner <bremner@debian.org>  Thu, 18 Oct 2018 21:15:53 -0300
+ -- David Bremner <bremner@debian.org>  Thu, 18 Oct 2018 21:28:20 -0300
 
 dpkg-dev-el (37.4) unstable; urgency=medium
 
